# hsh

./: .clang-format  .clang-tidy  .clangd  .envrc  .gitignore  CMakeLists.txt  Cargo.toml  README.md  justfile
cmake/: CpuOptimization.cmake  Sanitizers.cmake
hsh/: Cargo.toml
hsh-parse/: Cargo.toml
hsh-parse/src/: lib.rs
hsh-parse/src/lex/: mod.rs  token.rs
hsh/src/: main.rs
hsh_parse/: Cargo.toml
hsh_parse/src/: lib.rs  string.rs  token.rs
hsh_parse/src/lex/: mod.rs  token.rs
include/hsh/: AST.hpp  Builtins.hpp  Constants.hpp  Executor.hpp  FileDescriptor.hpp  FixedString.hpp  Lexer.hpp  Parser.hpp  Signals.hpp  Tokens.hpp  Util.hpp
src/: Builtins.cpp  CMakeLists.txt  Constants.cpp  Executor.cpp  FileDescriptor.cpp  Lexer.cpp  Parser.cpp  Signals.cpp  Util.cpp  hsh.cppm  main.cpp
src/Builtins/: Alias.cpp  CD.cpp  Echo.cpp  Exit.cpp  Export.cpp  alias.cpp  cd.cpp  echo.cpp  exit.cpp  export.cpp
src/builtin/: CMakeLists.txt  builtin.cpp  builtin.cppm  cd.cpp  echo.cpp  exit.cpp  export.cpp  jobs.cpp  pwd.cpp
src/cli/: CMakeLists.txt  arg_parser.cpp  argument_parser.cpp  cli.cppm  hsh.cli.cppm  util.cpp
src/compiler/: CMakeLists.txt  ast_converter.cpp  compiler.cppm  redirection.cpp  redirection.cppm
src/context/: CMakeLists.txt  context.cpp  context.cppm
src/core/: CMakeLists.txt  arithmetic_utils.cpp  constant.cppm  core.cppm  env.cpp  env.cppm  environment.cpp  environment_manager.cpp  file_descriptor.cpp  file_descriptor.cppm  hsh.core.cppm  locale.cpp  locale.cppm  locale_manager.cpp  result.cppm  signal.cpp  signal.cppm  string_utils.cpp  syscall.cpp  syscall.cppm  util.cppm
src/executor/: CMakeLists.txt  executor.cppm
src/expand/: CMakeLists.txt  arithmetic.cpp  arithmetic.cppm  brace.cpp  brace.cppm  expand.cpp  expand.cppm  pathname.cpp  pathname.cppm  tilde.cpp  tilde.cppm  variable.cpp  variable.cppm
src/job/: CMakeLists.txt  job.cppm  job_manager.cpp
src/lexer/: CMakeLists.txt  lexer.cpp  lexer.cppm
src/parser/: CMakeLists.txt  ast.cpp  ast.cppm  hsh.parser.cppm  lexer.cpp  parser.cpp  parser.cppm  printer.cpp  printer.cppm  token.cpp
src/process/: CMakeLists.txt  command_types.cpp  errors.cpp  file_descriptor.cpp  hsh.process.cppm  job_controller.cpp  pipe_manager.cpp  pipeline_executor.cpp  pipeline_runner.cpp  process.cpp  process.cppm  process_group.cpp  signal_handler.cpp
src/shell/: CMakeLists.txt  alias.cpp  app.cpp  app.cppm  arithmetic.cpp  command_runner.cpp  expansion.cpp  hsh.shell.cppm  prompt.cpp  prompt.cppm  registry.cpp  runner.cpp  runner.cppm  shell.cpp  shell.cppm  shell_state.cpp  subshell_executor.cpp
src/shell/builtin/: alias.cpp  cd.cpp  echo.cpp  exit.cpp  export.cpp  set.cpp
test/: CMakeLists.txt  alias_test.cpp  arithmetic_expansion_test.cpp  arithmetic_test.cpp  builtins_test.cpp  command_substitution_test.cpp  environment_manager_test.cpp  example.cpp  export_test.cpp  lexer_test.cpp  parser_test.cpp  pipeline_executor_test.cpp  process_test.cpp  quoting_test.cpp  redirection_test.cpp  shell_exec_test.cpp  test_Builtins.cpp  test_Executor.cpp  test_FileDescriptor.cpp  test_Lexer.cpp  test_Parser.cpp  test_Shell.cpp  test_Util.cpp  test_utils.h  tilde_expansion_test.cpp  variable_test.cpp
test/builtin/: TEST_builtin.cpp
test/cli/: TEST_arg_parser.cpp
test/context/: TEST_special_parameters.cpp
test/core/: TEST_signal.cpp
test/expand/: TEST_arithmetic.cpp  TEST_brace.cpp  TEST_pathname.cpp  TEST_special_parameter.cpp  TEST_tilde.cpp  TEST_variable.cpp
test/lexer/: TEST_lexer.cpp
test/parser/: TEST_parser.cpp  TEST_subshell_parser.cpp
test/process/: TEST_pipeline.cpp
test/shell/: TEST_command_runner.cpp  TEST_runner.cpp  TEST_subshell_execution.cpp
